networkPolicy/nginxPod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginxpod
  labels:
    app: nginx
spec:
  containers:
    - name: nginxcon
      image: nginx
      ports:
        - containerPort: 80
