networkPolicy/nginxPodtest.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginxpod-test
spec:
  containers:
  - name: nginxcon
    image: nginx
    ports:
    - containerPort: 80
