networkPolicy/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicynginx
spec:
  podSelector:
    matchLabels:
      app: nginx
  ingress:
  - ports:
    - port: 82
